Ajuste de layout e criação de menu tela painel

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -59,7 +59,7 @@
                   <a class="nav-link" href="/historia"> História </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/blog"> Painel de Dados </a>
+                  <a class="nav-link" href="/painel_dados"> Painel de Dados </a>
                 </li>
                 <li class="nav-item active">
                   <a class="nav-link" href="/contact">Contato </a>
