--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="/index">
-            <img src="{{ url_for('static', filename = 'images/logo2.png')}}" alt="">
+            <img src="{{ url_for('static', filename = 'images/logo.png')}}" alt="">
             <span>
               Parnaíba Connect
             </span>
@@ -78,16 +78,19 @@
           <div class="col-md-6 ">
             <div class="detail_box">
               <h1>
-                Electrical <br>
-                Service <br>
-                Providers
+                Parnaíba Connect: <br>
+                Os dados a serviço <br>
+                da cidade
               </h1>
               <p>
-                It is a long established fact that a reader will be distracted by the readable content of a page when
-                looking at its layout. The point of using Lorem
+                Vivemos em um mundo repleto de dados. Ao analisar as informações sobre saúde e população de <b>Santana
+                  de
+                  Parnaíba</b>, podemos identificar problemas e oportunidades, e assim tomar decisões mais eficientes
+                para
+                melhorar a vida de todos.
               </p>
-              <a href="" class="">
-                Contact Us
+              <!--<a href="" class="">
+                Contact Us-->
             </div>
           </div>
           <div class="col-lg-5 col-md-6 offset-lg-1">
@@ -442,7 +445,7 @@
       <div class="row">
         <div class="col-lg-7 col-md-9 mx-auto">
           <p>
-            &copy; 2019 All Rights Reserved By
+            &copy; 2024 All Rights Reserved By
             <a href="https://html.design/">Free Html Templates</a>
           </p>
         </div>
