--- a/templates/contact.html
+++ b/templates/contact.html
@@ -33,8 +33,8 @@
     <header class="header_section">
       <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="">
+          <a class="navbar-brand" href="/index">
+            <img src="{{ url_for('static', filename = 'images/logo.png')}}" alt="">
             <span>
               Parnaíba Connect
             </span>
