Ajuste nas legendas dos cards da história da cidade

--- a/templates/historia.html
+++ b/templates/historia.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-
+  <link rel="shortcut icon" href="{{ url_for('static', filename = 'images/logo.png')}}" type="image/x-icon">
   <title>Parnaíba Connect</title>
 
   <!-- slider stylesheet -->
@@ -115,7 +115,8 @@
               Igreja Matriz Santa Anna
             </h5>
             <p>
-              There are many variations of passages of Lorem Ipsum available,
+              A Igreja Matriz de Santa Ana e Paróquia Santa Ana (Sant'Ana) é um edifício religioso foi construída em
+              1882. É considerada a mais importante construção histórica da cidade.
             </p>
           </div>
         </div>
@@ -132,7 +133,9 @@
               Centro Histórico
             </h5>
             <p>
-              There are many variations of passages of Lorem Ipsum available,
+              É uma localidade do município que conta com construções antigas. O centro histórico de Santana de Parnaíba
+              possui 209 edificações tombadas. Trata-se do maior conjunto arquitetônico tombado e preservado do Estado
+              de São Paulo.
             </p>
           </div>
         </div>
@@ -149,7 +152,10 @@
               Vista aérea da Cidade
             </h5>
             <p>
-              There are many variations of passages of Lorem Ipsum available,
+              A cidade Santana de Parnaíba é um município do estado de São Paulo, localizado na Região Metropolitana da
+              capital paulista, microrregião de Osasco, localizada na Latitude – Sul 23° 26’ 39” e Longitude – Oeste 46°
+              55’ 04”, a uma altitude entre 696 e 1202 m. A cidade está entre as rodovias Castelo Branco e Anhanguera e
+              fica ao lado do Rodoanel Mário Covas.
             </p>
           </div>
         </div>
@@ -163,10 +169,12 @@
           </div>
           <div class="detail-box">
             <h5>
-              Monumento dos Bandeirantes
+              Monumento aos Bandeirantes
             </h5>
             <p>
-              There are many variations of passages of Lorem Ipsum available,
+              É um conjunto escultórico criado por Murilo Sá Toledo e inaugurado em 2006. Compõem a obra: dois pórticos
+              e 23 esculturas de bronze, que retratam personalidades importantes para a cidade, como os bandeirantes,
+              Susana Dias e André Fernandes.
             </p>
           </div>
         </div>
@@ -182,7 +190,10 @@
               Museu Casa do Anhanguera
             </h5>
             <p>
-              There are many variations of passages of Lorem Ipsum available,
+              O Museu Casa do Anhanguera é uma casa bandeirista do século XVII. Construída em taipa de pilão e taipa de
+              mão, presume-se que ali residiu o bandeirante Bartolomeu Bueno da Silva (o Anhanguera). Esse patrimônio
+              histórico foi restaurado e tombado pelo Instituto do Patrimônio Histórico e Artístico Nacional (IPHAN) em
+              1958. O museu está localizado no Largo da Matriz.
             </p>
           </div>
         </div>
