--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-
+  <link rel="shortcut icon" href="{{ url_for('static', filename = 'images/logo.png')}}" type="image/x-icon">
   <title>Parnaíba Connect</title>
 
   <!-- slider stylesheet -->
@@ -99,13 +99,13 @@
               </select>
             </div>
             <div>
-              <input type="text" placeholder="Name" />
+              <input type="text" placeholder="Nome" />
             </div>
             <div>
               <input type="email" placeholder="Email" />
             </div>
             <div>
-              <input type="text" class="message-box" placeholder="Message" />
+              <input type="text" class="message-box" placeholder="Mensagem" />
             </div>
             <div class="d-flex ">
               <button>
