--- a/templates/painel_dados.html
+++ b/templates/painel_dados.html
@@ -11,7 +11,7 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <meta name="author" content="" />
-
+  <link rel="shortcut icon" href="{{ url_for('static', filename = 'images/logo.png')}}" type="image/x-icon">
   <title>Parnaíba Connect</title>
 
   <!-- slider stylesheet -->
