Alteração das imagens tela home

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,10 @@
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
+  <meta name="keywords" content="Santana de Parnaíba, Saúde, Análise de Dados, Dashboar" />
+  <meta name="description" content="Com o objetivo de facilitar o acesso e a interpretação desses dados saúde e populacional para a população
+  de Santana de Parnaíba, desenvolvemos a plataforma Parnaíba Connect." />
+  <meta name="author" content="Alunos Fatec" />
   <link rel="shortcut icon" href="{{ url_for('static', filename = 'images/logo.png')}}" type="image/x-icon">
   <title>Parnaíba Connect</title>
 
@@ -100,17 +101,17 @@
                   <div class="carousel-inner">
                     <div class="carousel-item active">
                       <div class="img-box">
-                        <img src="{{ url_for('static', filename = 'images/slider-img.jpg')}}" alt="">
+                        <img src="{{ url_for('static', filename = 'images/imagem_home_2.jpg')}}" alt="">
                       </div>
                     </div>
                     <div class="carousel-item">
                       <div class="img-box">
-                        <img src="{{ url_for('static', filename = 'images/slider-img.jpg')}}" alt="">
+                        <img src="{{ url_for('static', filename = 'images/imagem_home_1.jpg')}}" alt="">
                       </div>
                     </div>
                     <div class="carousel-item">
                       <div class="img-box">
-                        <img src="{{ url_for('static', filename = 'images/slider-img.jpg')}}" alt="">
+                        <img src="{{ url_for('static', filename = 'images/imagem_home_3.jpg')}}" alt="">
                       </div>
                     </div>
                   </div>
