Ajuste no menu painel de dados

--- a/templates/historia.html
+++ b/templates/historia.html
@@ -199,7 +199,7 @@
         </div>
       </div>
       <div class="btn-box">
-        <a href="https://www.santanadeparnaiba.sp.gov.br/cidade.html" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.tourvirtual360.com.br/santana/" target="_blank" rel="noopener noreferrer">
           Saiba Mais
         </a>
       </div>
