--- a/static/css/style_mozaico.css
+++ b/static/css/style_mozaico.css
@@ -10,7 +10,7 @@
 
 .gkNspPM-NewNewsHeader .gkImagesWrapper {
 	position: relative;
-	width: 100%;	
+	width: 100%;
 }
 
 .gkNspPM-NewNewsHeader .gkImage {
@@ -150,9 +150,9 @@
 	transform: scale(1.1);
 }
 
-.gkNspPM-NewNewsHeader .gkImageArea:after {	
+.gkNspPM-NewNewsHeader .gkImageArea:after {
 	background: -moz-linear-gradient(5deg, #002f4b, #000);
-	background: -webkit-linear-gradient(5deg, #002f4b, #000);	
+	background: -webkit-linear-gradient(5deg, #002f4b, #000);
 	background: -o-linear-gradient(5deg, #002f4b, #000);
 	background: -ms-linear-gradient(5deg, #002f4b, #000);
 	background: linear-gradient(5deg, #002f4b, #000);
@@ -174,9 +174,11 @@
 .gkNspPM-NewNewsHeader[data-layout="main_2cols_2cols"] .gkImage1 .gkImageArea:after {
 	display: none;
 }
+
 .gkNspPM-NewNewsHeader .gkImageArea:hover:after {
 	opacity: 0;
 }
+
 .gkNspPM-NewNewsHeader .gkBlankImage {
 	width: 50%;
 }
@@ -193,10 +195,11 @@
 	line-height: 1.3;
 	left: 2.5rem;
 	margin: 0;
-	max-width: 500px;	
+	max-width: 500px;
 	will-change: font-size;
 	position: absolute;
 	z-index: 1;
+	background-color: transparent;
 }
 
 .gkNspPM-NewNewsHeader .gkTitle a {
@@ -208,7 +211,7 @@
 }
 
 .gkNspPM-NewNewsHeader[data-layout="main_2rows_2rows"] .gkImage1 .gkTitle {
-	background: rgba(66, 165, 245, .75);
+	background: transparent;
 	bottom: 0;
 	font-size: 30px;
 	font-weight: 400;
@@ -220,15 +223,17 @@
 
 /* Mobile devices */
 @media (max-width: 1240px) {
-	.gkNspPM-NewNewsHeader[data-layout="main_2rows_2rows"] .gkImage1 .gkTitle, 
-	.gkNspPM-NewNewsHeader[data-layout="4cols_2cols"] .gkImage5 .gkTitle, 
+
+	.gkNspPM-NewNewsHeader[data-layout="main_2rows_2rows"] .gkImage1 .gkTitle,
+	.gkNspPM-NewNewsHeader[data-layout="4cols_2cols"] .gkImage5 .gkTitle,
 	.gkNspPM-NewNewsHeader[data-layout="4cols_2cols"] .gkImage6 .gkTitle {
-	    font-size: 20px!important;
-	   
+		font-size: 20px !important;
+
 	}
 }
 
 @media (max-width: 960px) {
+
 	.gkNspPM-NewNewsHeader[data-layout="main_2rows_2rows"] .gkImage2 .gkTitle,
 	.gkNspPM-NewNewsHeader[data-layout="main_2rows_2rows"] .gkImage3 .gkTitle,
 	.gkNspPM-NewNewsHeader[data-layout="main_2rows_2rows"] .gkImage4 .gkTitle,
@@ -237,8 +242,8 @@
 	.gkNspPM-NewNewsHeader[data-layout="4cols_2cols"] .gkImage2 .gkTitle,
 	.gkNspPM-NewNewsHeader[data-layout="4cols_2cols"] .gkImage3 .gkTitle,
 	.gkNspPM-NewNewsHeader[data-layout="4cols_2cols"] .gkImage4 .gkTitle {
-	    font-size: 14px;
-	    line-height: 1.4;
+		font-size: 14px;
+		line-height: 1.4;
 	}
 }
 
@@ -246,24 +251,24 @@
 	.gkNspPM-NewNewsHeader .gkBlankImage {
 		display: none;
 	}
-	
+
 	.gkNspPM-NewNewsHeader .gkImage {
 		float: left;
-		height: 200px!important;
-		left: 0!important;
-		position: relative!important;
-		top: 0!important;
-		width: 100%!important;
+		height: 200px !important;
+		left: 0 !important;
+		position: relative !important;
+		top: 0 !important;
+		width: 100% !important;
 	}
-	
-	.gkNspPM-NewNewsHeader[data-layout="main_2rows_2rows"] .gkImage1, 
-	.gkNspPM-NewNewsHeader[data-layout="4cols_2cols"] .gkImage5, 
+
+	.gkNspPM-NewNewsHeader[data-layout="main_2rows_2rows"] .gkImage1,
+	.gkNspPM-NewNewsHeader[data-layout="4cols_2cols"] .gkImage5,
 	.gkNspPM-NewNewsHeader[data-layout="4cols_2cols"] .gkImage6 {
-		width: 100%!important;
+		width: 100% !important;
 	}
-	
+
 	.gkNspPM-NewNewsHeader .gkTitle {
-		left:  20px;
+		left: 20px;
 		right: 20px;
 	}
 }
