--- a/templates/painel_dados.html
+++ b/templates/painel_dados.html
@@ -51,7 +51,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <div class="d-flex ml-auto flex-column flex-lg-row align-items-center">
               <ul class="navbar-nav  ">
-                <li class="nav-item active">
+                <li class="nav-item">
                   <a class="nav-link" href="/index">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
@@ -60,7 +60,7 @@
                 <li class="nav-item">
                   <a class="nav-link" href="/historia"> História </a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                   <a class="nav-link" href="/painel_dados"> Painel de Dados </a>
                 </li>
                 <li class="nav-item">
@@ -77,16 +77,16 @@
   <div id="tabs" class="tabs">
     <ul>
       <li><a href="/painel_dados"><span>
-            <h1>Painél da Saúde</h1>
+            <h1>Saúde</h1>
           </span></a></li>
       <li><a href="/painel_dados"><span>
-            <h1>Painél Populacional</h1>
+            <h1>Populacional</h1>
           </span></a></li>
       <li><a href="/painel_dados"><span>
-            <h1>Painél da Dengue</h1>
+            <h1>Dengue</h1>
           </span></a></li>
       <li><a href="/painel_dados"><span>
-            <h1>Painél Prefeitura</h1>
+            <h1>Prefeitura</h1>
           </span></a></li>
     </ul>
   </div>
@@ -98,7 +98,7 @@
           <div class="col-md-6">
             <div class="box">
               <div class="img-box">
-                <img src="images/blog1.jpg" alt="">
+                <img src="{{ url_for('static', filename = 'images/blog1.jpg')}}" alt="">
               </div>
               <div class="detail-box">
                 <h5>
