--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
                   <a class="nav-link" href="/about"> Sobre</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/historia"> História </a>
+                  <a class="nav-link" href="/historia"> Cidade </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/painel_dados"> Painel de Dados </a>
@@ -306,58 +306,6 @@
   <!-- end blog section -->
 
 
-
-  <!-- contact section -->
-
-  <section class="contact_section layout_padding">
-    <div class="container ">
-      <div class="heading_container">
-        <h2>
-          Contact Us
-        </h2>
-        <img src="{{ url_for('static', filename = 'images/plug.png')}}" alt="">
-      </div>
-    </div>
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <form action="">
-            <div>
-              <input type="text" placeholder="Name" />
-            </div>
-            <div>
-              <input type="email" placeholder="Email" />
-            </div>
-            <div>
-              <input type="text" placeholder="Phone Number" />
-            </div>
-            <div>
-              <input type="text" class="message-box" placeholder="Message" />
-            </div>
-            <div class="d-flex ">
-              <button>
-                SEND
-              </button>
-            </div>
-          </form>
-        </div>
-        <div class="col-md-6">
-          <div class="map_container">
-            <div class="map-responsive">
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3812.5717130124367!2d-46.880641078412644!3d-23.406645418504773!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cf1ddad2858c6f%3A0x8540bd64dbbe879b!2sFATEC%20Santana%20de%20Parna%C3%ADba!5e0!3m2!1spt-BR!2sbr!4v1726836078166!5m2!1spt-BR!2sbr"
-                width="600" height="300" frameborder="0" style="border:0; width: 100%; height:100%"
-                allowfullscreen></iframe>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end contact section -->
-
-
   <!-- info section -->
 
   <section class="info_section layout_padding">
@@ -365,68 +313,54 @@
       <div class="info_contact">
         <div class="row">
           <div class="col-md-4">
-            <a href="">
-              <img src="{{ url_for('static', filename = 'images/location-white.png')}}" alt="">
+            <a class="navbar-brand2 navbar-brand" href="/index">
+              <img src="{{ url_for('static', filename = 'images/logo.png')}}" alt="">
               <span>
-                Passages of Lorem Ipsum available
+                Parnaíba Connect
               </span>
             </a>
           </div>
           <div class="col-md-4">
-            <a href="">
-              <img src="{{ url_for('static', filename = 'images/telephone-white.png')}}" alt="">
-              <span>
-                Call : +012334567890
-              </span>
-            </a>
+
+            <ul>
+              <li><a href="/index"><span>
+                    <h4>Home</h4>
+                  </span></a></li>
+              <li><a href="/about"><span>
+                    <h4>Sobre</h4>
+                  </span></a></li>
+              <li><a href="/historia"><span>
+                    <h4>Cidade</h4>
+                  </span></a></li>
+              <li><a href="/painel_dados"><span>
+                    <h4>Painel de dados</h4>
+                  </span></a></li>
+              <li><a href="/contact"><span>
+                    <h4>Contato</h4>
+                  </span></a></li>
+            </ul>
+
           </div>
           <div class="col-md-4">
-            <a href="">
+            <a href="/contact">
               <img src="{{ url_for('static', filename = 'images/envelope-white.png')}}" alt="">
               <span>
-                demo@gmail.com
+                Entre em contato
+                <br>
+                <br>
+                ENDEREÇO:
+                <br>
+                <br>
+                FATEC Santana de Parnaíba
+                <br>
+                Av. Ten. Marques, 5136 - Chácara do Solar I (Fazendinha),
+                <br>
+                Santana de Parnaíba - SP, 06530-001
               </span>
             </a>
           </div>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-8 col-lg-9">
-          <div class="info_form">
-            <form action="">
-              <input type="text" placeholder="Enter your email">
-              <button>
-                subscribe
-              </button>
-            </form>
-          </div>
-        </div>
-        <div class="col-md-4 col-lg-3">
-          <div class="info_social">
-            <div>
-              <a href="">
-                <img src="{{ url_for('static', filename = 'images/fb.png')}}" alt="">
-              </a>
-            </div>
-            <div>
-              <a href="">
-                <img src="{{ url_for('static', filename = 'images/twitter.png')}}" alt="">
-              </a>
-            </div>
-            <div>
-              <a href="">
-                <img src="{{ url_for('static', filename = 'images/linkedin.png')}}" alt="">
-              </a>
-            </div>
-            <div>
-              <a href="">
-                <img src="{{ url_for('static', filename = 'images/instagram.png')}}" alt="">
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-
     </div>
   </section>
 
@@ -438,8 +372,8 @@
       <div class="row">
         <div class="col-lg-7 col-md-9 mx-auto">
           <p>
-            &copy; 2024 All Rights Reserved By
-            <a href="https://html.design/">Free Html Templates</a>
+            &copy; 2024 - Todos os direitos reservados
+            <a href="/index">www.parnaibaconnect.com.br</a>
           </p>
         </div>
       </div>
