--- a/templates/historia.html
+++ b/templates/historia.html
@@ -56,7 +56,7 @@
                   <a class="nav-link" href="/about"> Sobre</a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="/historia"> História </a>
+                  <a class="nav-link" href="/historia"> Cidade </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/painel_dados"> Painel de Dados </a>
